--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="common_network_error">通信に失敗したようです。</string>
 
-    <string name="episode_recode_count">%1$d人が見ました</string>
+    <string name="episode_recode_count">このエピソードを%1$d人が見ました</string>
     <string name="episode_comment_hint">見た感想を残してみませんか？</string>
     <string name="episode_recode">✓ 記録する</string>
     <string name="episode_recode_completed">記録しました</string>
