--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
 
     <string name="common_network_error">通信に失敗したようです。</string>
 
+    <string name="work_season">%1$sアニメ</string>
+    <string name="work_episode_count">エピソード数:%1$d</string>
+    <string name="work_site">公式サイト</string>
+    <string name="work_wikipedia">Wikipedia</string>
+    <string name="work_watchers_count">この作品を%1$d人が見ています</string>
+
     <string name="episode_recode_count">このエピソードを%1$d人が見ました</string>
     <string name="episode_comment_hint">見た感想を残してみませんか？</string>
     <string name="episode_recode">✓ 記録する</string>
